RESOLVED FIXED74772
FEComposite does not build when you disable filters on ARMv7
https://bugs.webkit.org/show_bug.cgi?id=74772
Summary FEComposite does not build when you disable filters on ARMv7
Benjamin Poulain
Reported 2011-12-16 17:34:09 PST
Look like there could be a few missing ENABLE(FILTERS) here...
Attachments
Patch (2.38 KB, patch)
2011-12-16 17:39 PST, Benjamin Poulain
ddkilzer: review+
ddkilzer: commit-queue-
Benjamin Poulain
Comment 1 2011-12-16 17:39:20 PST
Andreas Kling
Comment 2 2011-12-16 18:07:02 PST
Comment on attachment 119704 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=119704&action=review > Source/WebCore/platform/graphics/filters/arm/FECompositeArithmeticNEON.h:33 > +#if CPU(ARM_NEON) && COMPILER(GCC) > + > #include <wtf/Platform.h> This doesn't look right, we get CPU() and COMPILER() from Platform.h
David Kilzer (:ddkilzer)
Comment 3 2011-12-16 19:40:59 PST
(In reply to comment #2) > (From update of attachment 119704 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=119704&action=review > > > Source/WebCore/platform/graphics/filters/arm/FECompositeArithmeticNEON.h:33 > > +#if CPU(ARM_NEON) && COMPILER(GCC) > > + > > #include <wtf/Platform.h> > > This doesn't look right, we get CPU() and COMPILER() from Platform.h The magic of the WebCorePrefix.h header means that the CPU() and COMPILER() macros will be defined (at least on OS X), but it would be best to put #include <wtf/Platform.h> above the macros for other ports.
David Kilzer (:ddkilzer)
Comment 4 2011-12-16 19:42:10 PST
Comment on attachment 119704 [details] Patch r=me if you fix the #include <wtf/Platform.h> location in FECompositeArithmeticNEON.h.
Benjamin Poulain
Comment 5 2011-12-16 21:26:59 PST
I don't mind but isn't the file always gonna be included after config.h anyway?
Benjamin Poulain
Comment 6 2011-12-16 21:55:04 PST
David Kilzer (:ddkilzer)
Comment 7 2011-12-17 19:16:31 PST
(In reply to comment #5) > I don't mind but isn't the file always gonna be included after config.h anyway? True. I guess it's the principle of the matter. :)
Note You need to log in before you can comment on or make changes to this bug.