FEComposite does not build when you disable filters on ARMv7 https://bugs.webkit.org/show_bug.cgi?id=74772

Patch by Benjamin Poulain <bpoulain@apple.com> on 2011-12-16
Reviewed by David Kilzer.

Add the missing ENABLE(FILTERS).

* platform/graphics/filters/arm/FECompositeArithmeticNEON.cpp:
* platform/graphics/filters/arm/FECompositeArithmeticNEON.h:


Canonical link: https://commits.webkit.org/91507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103143 268f45cc-cd09-0410-ab3c-d52691b4dbfc